@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.iterators.user;
 
@@ -38,11 +40,9 @@ import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.DefaultIteratorEnvironment;
 import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
 import org.apache.accumulo.core.iterators.SortedMapIterator;
-import org.apache.accumulo.core.iterators.system.ColumnFamilySkippingIterator;
+import org.apache.accumulo.core.iteratorsImpl.system.ColumnFamilySkippingIterator;
 import org.apache.hadoop.io.Text;
 import org.junit.Test;
-
-import com.google.common.collect.ImmutableSet;
 
 public class RowFilterTest {
 
@@ -66,14 +66,14 @@ public class RowFilterTest {
 
       // ensure that seeks are confined to the row
       rowIterator.seek(new Range(null, false, firstKey == null ? null : firstKey.getRow(), false),
-          new HashSet<ByteSequence>(), false);
+          new HashSet<>(), false);
       while (rowIterator.hasTop()) {
         sum2 += Integer.parseInt(rowIterator.getTopValue().toString());
         rowIterator.next();
       }
 
       rowIterator.seek(new Range(firstKey == null ? null : firstKey.getRow(), false, null, true),
-          new HashSet<ByteSequence>(), false);
+          new HashSet<>(), false);
       while (rowIterator.hasTop()) {
         sum2 += Integer.parseInt(rowIterator.getTopValue().toString());
         rowIterator.next();
@@ -88,7 +88,7 @@ public class RowFilterTest {
     private static final Set<String> passRows = new HashSet<>(Arrays.asList("0", "1"));
 
     @Override
-    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) throws IOException {
+    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) {
       return rowIterator.hasTop() && passRows.contains(rowIterator.getTopKey().getRow().toString());
     }
   }
@@ -97,14 +97,14 @@ public class RowFilterTest {
     private static final Set<String> passRows = new HashSet<>(Arrays.asList("1", "2"));
 
     @Override
-    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) throws IOException {
+    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) {
       return rowIterator.hasTop() && passRows.contains(rowIterator.getTopKey().getRow().toString());
     }
   }
 
   public static class TrueFilter extends RowFilter {
     @Override
-    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) throws IOException {
+    public boolean acceptRow(SortedKeyValueIterator<Key,Value> rowIterator) {
       return true;
     }
   }
@@ -184,27 +184,27 @@ public class RowFilterTest {
         new ColumnFamilySkippingIterator(new SortedMapIterator(createKeyValues()));
 
     RowFilter filter = new SummingRowFilter();
-    filter.init(source, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter.init(source, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
-    filter.seek(new Range(), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range(), Collections.emptySet(), false);
 
     assertEquals(new HashSet<>(Arrays.asList("2", "3")), getRows(filter));
 
     ByteSequence cf = new ArrayByteSequence("cf2");
 
-    filter.seek(new Range(), ImmutableSet.of(cf), true);
+    filter.seek(new Range(), Set.of(cf), true);
     assertEquals(new HashSet<>(Arrays.asList("1", "3", "0", "4")), getRows(filter));
 
-    filter.seek(new Range("0", "4"), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range("0", "4"), Collections.emptySet(), false);
     assertEquals(new HashSet<>(Arrays.asList("2", "3")), getRows(filter));
 
-    filter.seek(new Range("2"), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range("2"), Collections.emptySet(), false);
     assertEquals(new HashSet<>(Arrays.asList("2")), getRows(filter));
 
-    filter.seek(new Range("4"), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range("4"), Collections.emptySet(), false);
     assertEquals(new HashSet<String>(), getRows(filter));
 
-    filter.seek(new Range("4"), ImmutableSet.of(cf), true);
+    filter.seek(new Range("4"), Set.of(cf), true);
     assertEquals(new HashSet<>(Arrays.asList("4")), getRows(filter));
 
   }
@@ -214,12 +214,12 @@ public class RowFilterTest {
     SortedMapIterator source = new SortedMapIterator(createKeyValues());
 
     RowFilter filter0 = new TrueFilter();
-    filter0.init(source, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter0.init(source, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
     RowFilter filter = new TrueFilter();
-    filter.init(filter0, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter.init(filter0, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
-    filter.seek(new Range(), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range(), Collections.emptySet(), false);
 
     assertEquals(new HashSet<>(Arrays.asList("0", "1", "2", "3", "4")), getRows(filter));
   }
@@ -230,12 +230,12 @@ public class RowFilterTest {
     SortedMapIterator source = new SortedMapIterator(createKeyValues());
 
     RowFilter filter0 = new RowZeroOrOneFilter();
-    filter0.init(source, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter0.init(source, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
     RowFilter filter = new RowOneOrTwoFilter();
-    filter.init(filter0, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter.init(filter0, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
-    filter.seek(new Range(), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range(), Collections.emptySet(), false);
 
     assertEquals(new HashSet<>(Arrays.asList("1")), getRows(filter));
   }
@@ -245,9 +245,9 @@ public class RowFilterTest {
     SortedMapIterator source = new SortedMapIterator(createKeyValues());
 
     RowFilter filter = new RowZeroOrOneFilter();
-    filter.init(source, Collections.<String,String>emptyMap(), new DefaultIteratorEnvironment());
+    filter.init(source, Collections.emptyMap(), new DefaultIteratorEnvironment());
 
-    filter.seek(new Range(), Collections.<ByteSequence>emptySet(), false);
+    filter.seek(new Range(), Collections.emptySet(), false);
 
     // Save off the first key and value
     Key firstKey = filter.getTopKey();
@@ -268,7 +268,7 @@ public class RowFilterTest {
     RowFilter copy = (RowFilter) filter.deepCopy(new DefaultIteratorEnvironment());
 
     // Because it's a copy, we should be able to safely seek this one without affecting the original
-    copy.seek(new Range(), Collections.<ByteSequence>emptySet(), false);
+    copy.seek(new Range(), Collections.emptySet(), false);
 
     assertTrue("deepCopy'ed RowFilter did not have a top key", copy.hasTop());
 
